chore: downgrade kybra to v0.7 and update dependency versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 # Extension Python Dependencies
 # These will be checked during extension installation
 
-kybra>=0.10.0
-kybra-simple-db>=1.0.0
-kybra-simple-logging>=1.0.0
+kybra==0.7.*
+kybra-simple-logging==0.2.*
+kybra-simple-db>=0.3.2
+
 
 # Development dependencies (optional)
 pytest>=7.0.0
